solved issue of gap between sections

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,12 +1,7 @@
 .a{
-    height: 100vh;
+    height: auto;
     display: flex;
 }
-
-
-/* .a-right{
-    
-} */
 
 .a-title{
     font-weight: 400;
